--- a/index.html
+++ b/index.html
@@ -119,6 +119,33 @@
         </a> (Journal of Economic Dynamic and Control, 2021)
       </font>
     </p>
+    
+<div class="download-container">
+    <a class="btn-download" href="comfiles.zip" download>📥 Download All MATLAB Files</a>
+</div>
+
+<style>
+    .download-container {
+        text-align: center;
+        margin: 20px 0;
+    }
+
+    .btn-download {
+        display: inline-block;
+        background: #2980b9;
+        color: white;
+        padding: 12px 20px;
+        font-size: 18px;
+        font-weight: bold;
+        border-radius: 5px;
+        text-decoration: none;
+        transition: 0.3s ease;
+    }
+
+    .btn-download:hover {
+        background: #c0392b;
+    }
+</style>
 
     <div id="Codes">
       <p>
